design: 채집왕 페이지 스타일 수정

--- a/app/globals.css
+++ b/app/globals.css
@@ -24,6 +24,8 @@
   --color-skin: #fcded6;
   --color-indigo-300: #a3b3ff;
   --color-blue-800: #193cb8;
+  --color-charcoal-100: #e8e8e8;
+  --color-charcoal-500: #b0b8c1;
 }
 
 :root {
